<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>webswing-app-interface</artifactId>
	<parent>
		<artifactId>webswing</artifactId>
		<groupId>org.webswing</groupId>
		<version>102.0.0</version>
		<relativePath>..</relativePath>
	</parent>
	<dependencies>
		<dependency>
			<groupId>org.webswing</groupId>
			<artifactId>webswing-app-launcher</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.webswing</groupId>
			<artifactId>webswing-directdraw-swing</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-client</artifactId>
			<version>${activemq.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
  			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.bcel</groupId>
			<artifactId>bcel</artifactId>
			<version>${apache.bcel.version}</version>
			<exclusions>
				<exclusion>
					<groupId>jakarta-regexp</groupId>
					<artifactId>jakarta-regexp</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>
		<dependency>
			<groupId>com.objectplanet.image</groupId>
			<artifactId>pngencoder</artifactId>
			<version>${pngencoder.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<!--inherit from platfrom-->
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.freehep</groupId>
			<artifactId>freehep-graphicsio-pdf</artifactId>
			<version>${freehep.vectorgraphics.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>freehep-graphicsio-tests</artifactId>
					<groupId>org.freehep</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.lz4</groupId>
			<artifactId>lz4-java</artifactId>
			<version>${lz4.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.js</groupId>
			<artifactId>js</artifactId>
    		<version>21.3.0</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>webswing-app-interface</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>		
		</plugins>
	</build>
</project>